# pandera-template

./: README.md  pyproject.toml
data/: coluna_adicional.csv  dados_financeiros.csv
src/: contrato.py  etl.py
tests/: test_contrato_in.py  test_contrato_out.py
